crates/infinity-agent-cli/tests/snapshots/tui_viewport_snapshots__choice_picker_open.snap
---
source: crates/infinity-agent-cli/tests/tui_viewport_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
~ scroll line 03
~ scroll line 04
┌────────────────────────────────────────────────────────────────────────────────┐
│scroll line 05                                                                  │
│scroll line 06                                                                  │
│> pick something                                                                │
│Working on it...                                                                │
│                                                                                │
│██████████                                                                      │
│────────────────────────────────────────────────────────────────────────────────│
│ Allow the tool to run?                                                         │
│ ▸ Allow (default)                                                              │
│   Deny                                                                         │
│                                                                                │
│                                                                                │
│                                                                                │
│↑↓ navigate  enter select  esc default             mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=3 col=16 (hidden)
