crates/infinity-agent-cli/tests/snapshots/tui_viewport_snapshots__combined_grown.snap
---
source: crates/infinity-agent-cli/tests/tui_viewport_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
┌────────────────────────────────────────────────────────────────────────────────┐
│scroll line 03                                                                  │
│scroll line 04                                                                  │
│> busy                                                                          │
│                                                                                │
│▄▄▄▄▄▄▄▄▄▄                                                                      │
│child-1 child working                                                           │
│────────────────────────────────────────────────────────────────────────────────│
│/help     Show help           /quit     Exit                                    │
│/new      New session         /load     Load session                            │
│/model    Switch model        /compact  Trigger compaction                      │
│/stop     Stop agent          /archive  Archive session                         │
│                                                                                │
│                                                                                │
│ /                                                                              │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=2
