crates/infinity-agent-cli/tests/snapshots/tui_viewport_snapshots__input_mid_stream.snap
---
source: crates/infinity-agent-cli/tests/tui_viewport_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
┌────────────────────────────────────────────────────────────────────────────────┐
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> first question                                                                │
│answering the first question                                                    │
│                                                                                │
│> second question                                                               │
│...still streaming the first answer                                             │
│                                                                                │
│██████████                                                                      │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
