crates/infinity-agent-cli/tests/snapshots/tui_viewport_snapshots__model_picker_open.snap
---
source: crates/infinity-agent-cli/tests/tui_viewport_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
┌────────────────────────────────────────────────────────────────────────────────┐
│scroll line 03                                                                  │
│scroll line 04                                                                  │
│scroll line 05                                                                  │
│scroll line 06                                                                  │
│scroll line 07                                                                  │
│scroll line 08                                                                  │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ mock       Mock Model                 100k ctx                                 │
│ mock       Mock Mini                   32k ctx                                 │
│                                                                                │
│↑↓ navigate  enter select  esc cancel              mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=5 col=14 (hidden)
